--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "firebase": "^8.2.6",
     "firebase-admin": "^9.2.0",
